# PolitoCode

jsCode/lab_1/es_0/: es_0.js
jsCode/lab_1/es_1/: es_1.js  package-lock.json
jsCode/lab_2/: film.js  package-lock.json
jsCode/lab_3/progetto/: index.html  package-lock.json  test.html
jsCode/lab_4/lab03-html-css-main/: index-not-responsive.html  script.js
jsCode/lab_5/film_library/: package-lock.json  package.json
jsCode/lab_7/film_library/: package-lock.json  package.json
jsCode/lab_8/film_library/: dao.js  films.db  package-lock.json  package.json  server.js
jsCode/project/: README.md
jsCode/project/client/: package-lock.json  package.json
jsCode/project/server/: CSM_Small - Copia (2).db  CSM_Small.db  appname.json  dao.js  index.js  user_dao.js
pyCode/Projects/Gender Identification 2/: gaussian_classifier.py  graph.py  logistic_regression.py  main.py
pyCode/Projects/Gender Identification fin/: gaussian_classifier.py  graph.py  logistic_reg_classifier.py  main.py  pre_processing.py
pyCode/lab02/: lab2.py
pyCode/lab03/: lab3.py
pyCode/lab04/: lab.py
pyCode/lab05/: lab05.py  lab05_def.py
pyCode/lab06/: lab06_def.py
pyCode/lab06_pc/: lab06.py
pyCode/lab07/: lab07_binary.py  lab07_def.py  lab07_multiclass.py  lab_07.py
pyCode/lab08/: lab8.py  lab_8.py  lab_8_binary.py  lab_8_multiclass.py
pyCode/lab09/: lab_9_binary_SVM.py  lab_9_kernel_SVM.py  lab_9_with_lib.py
rustCode/lab02/es2/: Cargo.toml
rustCode/lab02/es2/src/: lib.rs
rustCode/lab02/es2/src/consumer/src/: main.rs
rustCode/lab02/es2/src/producer/src/: main.rs
(+84 files in other folders)
