[package]
name = "lab02"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "producer"
path = "src/producer/src/main.rs"

[[bin]]
name = "consumer"
path = "src/consumer/src/main.rs"

[dependencies]
clap = { version = "4.2.1", features = ["derive"] }
fcntl = "0.1.0"
rand = "0.8.5"